--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
               <div class="overlay">
                 <p>Proyecto 1</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/"><i class="bi bi-github"></i></a>
-                  <a href="https://getbootstrap.com/"><i class="bi bi-pc-display-horizontal"></i></a>
+                  <a href="https://github.com/FelipeFlores22/Dulce-Tentacion.git"><i class="bi bi-github"></i></a>
+                  <!-- <a href="https://getbootstrap.com/"><i class="bi bi-pc-display-horizontal"></i></a> -->
                 </div>
               </div>
             </div>
@@ -180,11 +180,12 @@
           <img src="/img/favicon.ico" alt="Logo Felipe">
           <p>Capacitandome cada dia para mejorar </br> Hagamos un proyecto juntos</p>
         </div>
-        <div class="icon-footer">
+        <div class="copy"> &copy; Creado por Felipe Flores</div>
+        <!-- <div class="icon-footer">
           <a href="www.facebook.com"><i class="bi bi-facebook"></i></a>
           <a href="www.instagram.com"><i class="bi bi-instagram"></i></a>
           <a href="www.linkedin.com.com"><i class="bi bi-linkedin"></i></a>
-        </div>
+        </div> -->
       </div>
     </footer>
   <!-- JavaScript -->
